--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  // "homepage": "https://edusity.github.io/edusity-app",
-  "name": "edusity",
+  "homepage": "https://edusity.github.io/education-app",
+  "name": "education-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    // "predeploy": "npm run build",
-    // "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -15,6 +15,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
